feat:将log单独抽离为一个服务文件
