# docs/swagger.json
@@ -133,7 +133,7 @@
                 "responses": {}
             }
         },
-        "/geek/getListByVersion": {
+        "/log/getListByVersion": {
             "get": {
                 "description": "根据版本查询日志",
                 "consumes": [
@@ -143,7 +143,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "geek"
+                    "log"
                 ],
                 "summary": "CICD日志",
                 "parameters": [
